ufsutils (9.2-4) UNRELEASED; urgency=low

  * Fetch source code securely (https) in get-orig-source.

 -- Robert Millan <rmh@debian.org>  Sat, 07 Dec 2013 23:22:58 +0100

ufsutils (9.2-3) unstable; urgency=low

  * Bump kfreebsd-kernel-headers B-D to 9.2~5.
  * Fix ufsutils-udeb shlibs dependencies.

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 12:56:31 +0100

ufsutils (9.2-2) unstable; urgency=low

  * Avoid kfreebsd-kernel-headers versions prior to ino_t fix.
  * Remove gratuitous dependency on libtermcap / libtinfo.

 -- Robert Millan <rmh@debian.org>  Fri, 29 Nov 2013 14:21:12 +0100

ufsutils (9.2-1) experimental; urgency=low

  * New upstream release.

  [ Robert Millan ]
  * Switch architecture to kfreebsd-any.
  * Update debian/rules using freebsd-utils as template.
  * Changes above render obsolete most of the patches. Simplify patchset
    to make it more maintainable and easier to update. Patches left:
    - Already in upstream: 00_portable_berase.patch
    - Not in upstream, but probably mergeable: 05_wipe_otherfs.patch,
      fsck_getopt.diff
    - Pending on kern/162905 (help is welcome): 04_avoid_diocgdelete.patch
    - Not mergeable: makefiles.diff

 -- Robert Millan <rmh@debian.org>  Sat, 26 Oct 2013 15:08:15 +0200

ufsutils (8.2-4) unstable; urgency=low

  [ Robert Millan ]
  * Import 00_portable_berase.patch from upstream trunk.  Refresh all
    patches.

  [ Guillem Jover ]
  * Add build-indep and build-arch debian/rules targets:
    - Rename build to build-arch and install to install-arch.
  * Now using Standards-Version 3.9.4.
  * Switch to canonical Vcs URLs.
  * Remove packaging history from debian/copyright.
  * Switch to the libbsd-overlay.
    - Remove sys/endian.h local header now provided by libbsd.
  * Add install and install-indep targets for consistency.
  * Add -Werror=implicit-function-declaration to build flags.
  * Remove unneeded debian/ufsutils.dirs file.